--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <body>
     <h1> Hello World </h1>
     <p>Thi is webiste is hosted in github using github pages and html </p>
-  </body
-<html>
+  </body>
+</html>
