--- a/index-politician.html
+++ b/index-politician.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home Default || Inbio - Personal Portfolio Bootstrap Template</title>
+    <title>Home Politician || Inbio - Personal Portfolio Bootstrap Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,8 +21,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="template-color-1 spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
-
+<body class="template-color-1 front-end-developer spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
     <!-- Start Header -->
     <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
         <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
@@ -130,78 +129,89 @@
 
 
 
+    <!-- Start Main Page Wrapper -->
     <main class="main-page-wrapper">
 
         <!-- Start Slider Area -->
-        <div id="home" class="rn-slider-area">
-            <div class="slide slider-style-1">
-                <div class="container">
-                    <div class="row row--30 align-items-center">
-                        <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
-                            <div class="content">
-                                <div class="inner">
-                                    <span class="subtitle">Welcome to my world</span>
-                                    <h1 class="title">Hi, I’m <span>Jone Lee</span><br>
-                                        <span class="header-caption" id="page-top">
-                                            <!-- type headline start-->
-                                            <span class="cd-headline clip is-full-width">
-                                                <span>a </span>
-                                        <!-- ROTATING TEXT -->
-                                        <span class="cd-words-wrapper">
-                                                    <b class="is-visible">Developer.</b>
-                                                    <b class="is-hidden">Professional Coder.</b>
-                                                    <b class="is-hidden">Developer.</b>
-                                                </span>
-                                        </span>
-                                        <!-- type headline end -->
-                                        </span>
-                                    </h1>
+        <div class="rn-slider-area" id="home">
 
-                                    <div>
-                                        <p class="description">I use animation as a third dimension by which to simplify
-                                            experiences and kuiding thro each and every interaction. I’m not adding
-                                            motion
-                                            just to spruce things up, but doing it in ways that.</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12">
-                                        <div class="social-share-inner-left">
-                                            <span class="title">find with me</span>
-                                            <ul class="social-share d-flex liststyle">
-                                                <li class="facebook"><a href="#"><i data-feather="facebook"></i></a>
-                                                </li>
-                                                <li class="instagram"><a href="#"><i data-feather="instagram"></i></a>
-                                                </li>
-                                                <li class="linkedin"><a href="#"><i data-feather="linkedin"></i></a>
-                                                </li>
-                                            </ul>
+            <!-- Start Slider Area -->
+            <div class="rn-slider-area">
+                <div class="slide slider-style-2">
+                    <div class="container">
+                        <div class="row row--30">
+                            <div class="order-2 order-lg-1 col-lg-7 mt_md--40 mt_sm--40">
+                                <div class="content">
+                                    <div class="inner">
+                                        <span class="subtitle">Welcome to my world</span>
+                                        <h1 class="title">Hi, I’m <span>Zara Fatima</span><br><span
+                                                class="span"> Social Politician.</span></h1>
+                                        <div>
+                                            <p class="description">I use animation as a third dimension by which to
+                                                simplify experiences and kuiding thro each and every interaction. I’m
+                                                not adding
+                                                motion just to spruce things up, but doing it in ways that.</p>
                                         </div>
                                     </div>
-                                    <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12 mt_mobile--30">
-                                        <div class="skill-share-inner">
-                                            <span class="title">best skill on</span>
-                                            <ul class="skill-share d-flex liststyle">
-                                                <li><img src="assets/images/icons/icons-01.png" alt="Icons Images"></li>
-                                                <li><img src="assets/images/icons/icons-02.png" alt="Icons Images"></li>
-                                                <li><img src="assets/images/icons/icons-03.png" alt="Icons Images"></li>
-                                            </ul>
+                                    <div class="row">
+                                        <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12">
+                                            <div class="social-share-inner-left">
+                                                <span class="title">find with me</span>
+                                                <ul class="social-share d-flex liststyle">
+                                                    <li class="facebook"><a href="#"><i data-feather="facebook"></i></a>
+                                                    </li>
+                                                    <li class="instagram"><a href="#"><i
+                                                                data-feather="instagram"></i></a>
+                                                    </li>
+                                                    <li class="linkedin"><a href="#"><i data-feather="linkedin"></i></a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12 mt_mobile--30">
+                                            <div class="skill-share-inner">
+                                                <span class="title">best skill on</span>
+                                                <ul class="skill-share d-flex liststyle">
+                                                    <li><img src="assets/images/icons/icons-01.png" alt="Icons Images">
+                                                    </li>
+                                                    <li><img src="assets/images/icons/icons-02.png" alt="Icons Images">
+                                                    </li>
+                                                    <li><img src="assets/images/icons/icons-03.png" alt="Icons Images">
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="order-1 order-lg-2 col-lg-5">
-                            <div class="thumbnail">
-                                <div class="inner">
-                                    <img src="assets/images/slider/banner-01.png" alt="Personal Portfolio Images">
+                            <div class="order-1 order-lg-2 col-lg-5">
+                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner ">
+                                        <div class="carousel-item inner active">
+                                            <img class="d-block w-100" src="assets/images/slider/banner-07.png" alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="assets/images/slider/banner-08.png" alt="Second slide">
+                                        </div>
+                                    </div>
+
+                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                        <span class="" aria-hidden="true"> <i data-feather="chevron-left"></i> </span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                        <span class="" aria-hidden="true"> <i data-feather="chevron-right"></i> </span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- End Slider Area -->
+
         </div>
         <!-- End Slider Area -->
 
@@ -2888,7 +2898,6 @@
             </div>
         </div>
         <!-- End Contuct section -->
-
         <!-- Modal Portfolio Body area Start -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -3048,8 +3057,6 @@
             </div>
         </div>
         <!-- Back to top end -->
-
-
 
     </main>
 
